# gr-atsc-plus

./: .gitignore  README.md  benchmark_decoder.py  benchmark_synth.py  bootstrap.sh  combos.yaml  run_combo.py
decoders/: grdtv_decode_inst.py  grdtv_decode_longeq.py  grdtv_decode_v7.py  grdtv_decode_v8.py  grdtv_decode_v9.py
docs/: 2026-05-02-session.md  LINUX-USB-3.0-REQUIREMENT.md  findings.md  proven_capture_recipe.md  science.md
gr-atscplus/: CMakeLists.txt  _build.bat  _rebuild.bat
gr-atscplus/apps/: CMakeLists.txt
gr-atscplus/include/gnuradio/atscplus/: CMakeLists.txt  api.h  atsc_equalizer_cma.h  atsc_equalizer_long.h  atsc_equalizer_pilot.h  atsc_equalizer_pilot_dd.h  atsc_equalizer_pilot_dd_soft.h  atsc_equalizer_pilot_multifs.h  atsc_equalizer_pilot_multifs_dd.h  atsc_fpll_tight.h  atsc_fs_checker_inst.h  atsc_sync_fieldlock.h  atsc_sync_kalman.h  atsc_sync_pathA.h  atsc_sync_slidefs.h  atsc_sync_soft.h  atsc_sync_tunable.h  atsc_viterbi_soft.h
results/: 2026-04-30.md  2026-05-01-real-rf34-29combos.md  2026-05-01-real-rf34.md
scripts/: apply_fpll_tight.sh  apply_fs_checker_inst.sh  apply_soft_viterbi.sh  apply_sync_tunable.sh  run_local_sweep.sh
tools/: analyze_diag.py  analyze_short.py  atsc_cc.py  atsc_psip.py  config.py  default_stations.py  fcc_dc_stations.py  magic_player.py  magic_tv.py  probe_sdr.py  probe_throughput.py  quality_tuner.py  run_stvt_best.sh  sdr_sweep.py  soapy_server.bat  tv_live.py  tv_live_ab.py  tv_live_diag.py  tv_live_rf34.py  tv_live_rf34_softvit.py  tv_live_softvit.py  tv_player.py  tv_remote.py  tv_tuner.py
(+67 files in other folders)
